add address 2 for user

--- a/checkout_bot/templates/orders-list.html
+++ b/checkout_bot/templates/orders-list.html
@@ -16,6 +16,7 @@
             <th>Product name</th>
             <th>Buyer</th>
             <th>Address</th>
+            <th>Address2</th>
             <th>City</th>
             <th>State</th>
             <th>Postal code</th>
@@ -31,6 +32,7 @@
               <td>{{ order.product_name }}</td>
               <td>{{ order.product_buyer }}</td>
               <td>{{ order.buyer_address }}</td>
+              <td>{{ order.buyer_address2 }}</td>
               <td>{{ order.buyer_city }}</td>
               <td>{{ order.buyer_state_code }}</td>
               <td>{{ order.buyer_postal_code }}</td>
