add buyer phone number

--- a/checkout_bot/templates/orders-list.html
+++ b/checkout_bot/templates/orders-list.html
@@ -23,6 +23,7 @@
             <th>City</th>
             <th>State</th>
             <th>Postal code</th>
+            <th>Phone</th>
             <th>Date created</th>
             <th>Date started</th>
             <th>Express order ID</th>
@@ -44,6 +45,7 @@
               <td>{{ order.buyer_city }}</td>
               <td>{{ order.buyer_state_code }}</td>
               <td>{{ order.buyer_postal_code }}</td>
+              <td>{{ order.buyer_phone_number }}</td>
               <td>{{ order.date_created }}</td>
               <td>{{ order.date_started }}</td>
               <td>{{ order.express_order_id }}</td>
